--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Bootstrap Website for Homework</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootsrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="myNavbar">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -30,16 +30,16 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="a">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Testimonials</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <div id="#myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -61,13 +61,13 @@
         <img src="img/red.png">
       </div>
        </div>
-       <!---Startslider controls--->
-       <a class="left carousel-control" href="myCarousel" role="button" data-slide="prev">
-         <span class="glyphicon glyphicon-chevron-left" area-hidden="true"></span>
+       <!---Start slider controls--->
+       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
          <span class="sr-only">Previous</span>
        </a>
          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-           <span class="glyphicon glyphicon-chevron-left" area-hidden="true"></span>
+           <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
            <span class="sr-only">Next</span>
          </a>
       </div> <!---End Slider--->
@@ -84,7 +84,7 @@
                   <h4>Bootstrap</h4>
                 </div>
                 <div class="col-sm-4">
-                   <img src="img/css3png" id=icon
+                   <img src="img/css3.png" id=icon
                    <h4>CSS3</h4>
           </div>
        </div>
@@ -92,13 +92,13 @@
 
 <div class="container">
 <div class="row">
-<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+<div class="col-md-6">
   <h4>Here's the cool thing about Bootstrap...</h4>
   <p>Lorem ipsum dolor sit amet, scripta oblique civibus has no. Persecuti consetetur eum ex. Vix an amet adipisci philosophia. Suas omnes erroribus at pro, dico prompta id ius. Et graece mentitum molestiae vim, ea justo aliquip usu.
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-  <img src="img/bootsrap2.jpg" class="img-responsive">
+  <img src="img/bootstrap2.jpg" class="img-responsive">
 </div>
 </div>
 </div>
@@ -115,7 +115,18 @@
 </div>
 <div class="container">
 <div class="row">
-<h4><a href="#hidden" data-toggle="collapse">Care to learn more about Bootstrap?></h4>
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+  <h4>And Less</h4>
+  <p>Lorem ipsum dolor sit amet, scripta oblique civibus has no. Persecuti consetetur eum ex. Vix an amet adipisci philosophia. Suas omnes erroribus at pro, dico prompta id ius. Et graece mentitum molestiae vim, ea justo aliquip usu.
+</div>
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+  <img src="img/less.png" class="img-responsive">
+</div>
+</div>
+</div>
+<div class="container">
+<div class="row">
+<h4><a href="#hidden" data-toggle="collapse">Care to learn more about Bootstrap?</a></h4>
   <div id="hidden" class="collapse">
   <h4>Here's the cool thing about Bootstrap...</h4>
   <p>Lorem ipsum dolor sit amet, scripta oblique civibus has no. Persecuti consetetur eum ex. Vix an amet adipisci philosophia. Suas omnes erroribus at pro, dico prompta id ius. Et graece mentitum molestiae vim, ea justo aliquip usu.
